--- a/batchwin/titprilldlg.ui
+++ b/batchwin/titprilldlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>618</width>
-    <height>300</height>
+    <height>324</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>250</y>
+     <y>270</y>
      <width>191</width>
      <height>32</height>
     </rect>
@@ -62,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>70</y>
+     <y>90</y>
      <width>66</width>
      <height>17</height>
     </rect>
@@ -75,7 +75,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>70</y>
+     <y>90</y>
      <width>481</width>
      <height>27</height>
     </rect>
@@ -88,7 +88,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>120</y>
+     <y>140</y>
      <width>66</width>
      <height>17</height>
     </rect>
@@ -101,7 +101,7 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>120</y>
+     <y>140</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -126,7 +126,7 @@ job lives.</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>120</y>
+     <y>140</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -139,7 +139,7 @@ job lives.</string>
    <property name="geometry">
     <rect>
      <x>360</x>
-     <y>120</y>
+     <y>140</y>
      <width>121</width>
      <height>27</height>
     </rect>
@@ -155,7 +155,7 @@ job lives.</string>
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>170</y>
+     <y>190</y>
      <width>481</width>
      <height>29</height>
     </rect>
@@ -195,7 +195,7 @@ have &quot;special create&quot; permission.</string>
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>180</y>
+     <y>200</y>
      <width>66</width>
      <height>17</height>
     </rect>
@@ -208,7 +208,7 @@ have &quot;special create&quot; permission.</string>
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>230</y>
+     <y>250</y>
      <width>81</width>
      <height>17</height>
     </rect>
@@ -221,7 +221,7 @@ have &quot;special create&quot; permission.</string>
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>230</y>
+     <y>250</y>
      <width>141</width>
      <height>27</height>
     </rect>
@@ -234,7 +234,7 @@ have &quot;special create&quot; permission.</string>
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>120</y>
+     <y>140</y>
      <width>66</width>
      <height>17</height>
     </rect>
@@ -243,8 +243,41 @@ have &quot;special create&quot; permission.</string>
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>50</y>
+     <width>66</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Queue</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="queue">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>50</y>
+     <width>261</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>This is the optional queue prefix for the job</string>
+   </property>
+   <property name="editable">
+    <bool>true</bool>
+   </property>
+   <property name="insertPolicy">
+    <enum>QComboBox::InsertAlphabetically</enum>
+   </property>
+  </widget>
  </widget>
  <tabstops>
+  <tabstop>queue</tabstop>
   <tabstop>title</tabstop>
   <tabstop>priority</tabstop>
   <tabstop>rounddll</tabstop>
